@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023 Obeo.
+ * Copyright (c) 2023, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -20,5 +20,5 @@ import org.eclipse.sirius.components.diagrams.layoutdata.Size;
  *
  * @author sbegaudeau
  */
-public record NodeLayoutDataInput(String id, Position position, Size size) {
+public record NodeLayoutDataInput(String id, Position position, Size size, boolean resizedByUser) {
 }
