@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023 Obeo.
+ * Copyright (c) 2023, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -20,6 +20,7 @@ package org.eclipse.sirius.components.diagrams.layoutdata;
 public record NodeLayoutData(
         String id,
         Position position,
-        Size size
+        Size size,
+        boolean resizedByUser
 ) {
 }
