@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023 Obeo.
+ * Copyright (c) 2023, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -31,6 +31,7 @@ export interface GQLNodeLayoutData {
   id: string;
   position: GQLPosition;
   size: GQLSize;
+  resizedByUser: boolean;
 }
 
 export interface GQLRepresentationMetadata {
