@@ -81,6 +81,8 @@ Additional changes to this interface will propably occur in the near future in o
 The default implementation of the editing context for Sirius Web, which had Sirius Web specific code already, will be owned by `sirius-web-services`.
 This default implementation will now also contain all the view models properly loaded which should be considered during the lifecycle of the editing context.
 - https://github.com/eclipse-sirius/sirius-web/issues/2796[#2796] [sirius-web] All Flow related configurations have been moved to `sirius-components-flow-starter` module.
+- https://github.com/eclipse-sirius/sirius-web/issues/2883[#2883] [diagram] Add the attribute `resizedByUser` to reactflow nodes and graphql nodes.
+
 
 === Dependency update
 
@@ -104,6 +106,7 @@ Now, for a multi-valued feature, the values are properly displayed and the delet
 - https://github.com/eclipse-sirius/sirius-web/issues/2786[#2786] [diagram] Fix an issue where resizing was clunky.
 
 === New Features
+
 - https://github.com/eclipse-sirius/sirius-web/issues/2413[#2413] Add a debug mode for React Flow diagrams
 
 - https://github.com/eclipse-sirius/sirius-web/issues/2735[#2735] [gantt] Contribute the first version of the Gantt representation.
@@ -114,8 +117,9 @@ Now, for a multi-valued feature, the values are properly displayed and the delet
 - https://github.com/eclipse-sirius/sirius-web/issues/2765[#2765] [portal] Contribute the first version of the Portal representation.
 - https://github.com/eclipse-sirius/sirius-web/issues/2737[#2737] [gantt] Support create, edit and delete task in gantt.
 - https://github.com/eclipse-sirius/sirius-web/issues/2793[#2793] [diagram] Add the possibility to pin / unpin nodes.
-- https://github.com/eclipse-sirius/sirius-web/issues/2844[#2844] [Deck] Handle the card selection and direct edit in the Deck representation.
-- https://github.com/eclipse-sirius/sirius-web/issues/2871[#2871] [Deck] Handle Edit, Add and Remove Card operations.
+- https://github.com/eclipse-sirius/sirius-web/issues/2883[#2883] [diagram] The size of manually resized node does not change anymore, unless it needs to.
++
+The size of nodes that do not have been resized manually tries to fit the node default size.
 
 === Improvements
 
